Refactor to externalize pdf-template

--- a/src/AI/augmenter-agent/src/Altinn.Augmenter.Agent/Altinn.Augmenter.Agent.csproj
+++ b/src/AI/augmenter-agent/src/Altinn.Augmenter.Agent/Altinn.Augmenter.Agent.csproj
@@ -8,4 +8,8 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Include="pdf-templates\**\*.typ" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
+
 </Project>
