fixing review comments

--- a/src/AI/augmenter-agent/src/Altinn.Augmenter.Agent/appsettings.json
+++ b/src/AI/augmenter-agent/src/Altinn.Augmenter.Agent/appsettings.json
@@ -7,7 +7,9 @@
   },
   "Callback": {
     "AllowedPatterns": [],
-    "TimeoutSeconds": 30
+    "TimeoutSeconds": 30,
+    "MaxRetries": 3,
+    "RetryBaseDelaySeconds": 2
   },
   "Upload": {
     "MaxFileBytes": 10485760,
