--- a/src/Runtime/workflow-engine/docker-compose.yaml
+++ b/src/Runtime/workflow-engine/docker-compose.yaml
@@ -113,6 +113,7 @@ services:
     command:
       - "--global-response-templating"
       - "--verbose"
+      - "--max-request-journal-entries=1000"
 
 volumes:
   postgres_data:
