--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.Production.json
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.Production.json
@@ -1,8 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+  "EngineSettings": {},
+  "ApiSettings": {},
+  "AppCommandSettings": {},
+  "OTEL_DOTNET_EXPERIMENTAL_EFCORE_ENABLE_TRACE_DB_QUERY_PARAMETERS": "false"
 }
