--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.json
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.EntityFrameworkCore": "Warning"
     }
@@ -12,9 +12,9 @@
   },
   "EngineSettings": {
     "QueueCapacity": 10000,
-    "MaxDegreeOfParallelism": 100,
+    "MaxDegreeOfParallelism": 300,
     "MaxConcurrentDbOperations": 95,
-    "MaxConcurrentHttpCalls": 500,
+    "MaxConcurrentHttpCalls": 300,
     "DefaultStepCommandTimeout": "00:01:40",
     "DefaultStepRetryStrategy": {
       "BackoffType": "exponential",
