--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.Docker.json
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.Docker.json
@@ -1,14 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "ConnectionStrings": {
     "WorkflowEngine": "Host=postgres;Database=workflow_engine;Username=postgres;Password=postgres123"
   },
   "EngineSettings": {},
   "ApiSettings": {},
-  "AppCommandSettings": {}
+  "AppCommandSettings": {
+    //    "CommandEndpoint":  "http://host.docker.internal/{Org}/{App}/instances/{InstanceOwnerPartyId}/{InstanceGuid}/workflow-engine-callbacks"
+    "CommandEndpoint":  "http://wiremock:8080/{Org}/{App}/instances/{InstanceOwnerPartyId}/{InstanceGuid}/workflow-engine-callbacks"
+
+  }
 }
