--- a/src/App/frontend/package.json
+++ b/src/App/frontend/package.json
@@ -64,7 +64,6 @@
     "@types/node": "24.10.7",
     "@types/react": "19.2.8",
     "@types/react-dom": "19.2.3",
-    "@types/react-router-dom": "5.3.3",
     "@types/uuid": "11.0.0",
     "@typescript-eslint/eslint-plugin": "8.52.0",
     "@typescript-eslint/parser": "8.52.0",
@@ -176,7 +175,7 @@
     "react-dropzone": "14.3.8",
     "react-leaflet": "5.0.0",
     "react-number-format": "5.4.4",
-    "react-router-dom": "6.30.3",
+    "react-router": "7.13.0",
     "react-toastify": "11.0.5",
     "terraformer-wkt-parser": "1.2.1",
     "typescript": "5.9.3",
