Unit tests by Claude

--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Api/WorkflowEngine.Api.csproj
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Api/WorkflowEngine.Api.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <InternalsVisibleTo Include="$(AssemblyName).Tests" />
+    <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
   </ItemGroup>
 
 </Project>
