--- a/src/Runtime/workflow-engine/tests/WorkflowEngine.Data.Tests/WorkflowEngine.Data.Tests.csproj
+++ b/src/Runtime/workflow-engine/tests/WorkflowEngine.Data.Tests/WorkflowEngine.Data.Tests.csproj
@@ -19,4 +19,9 @@
     <Using Include="Xunit"/>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../../src/WorkflowEngine.Data/WorkflowEngine.Data.csproj" />
+    <ProjectReference Include="../../src/WorkflowEngine.Models/WorkflowEngine.Models.csproj" />
+  </ItemGroup>
+
 </Project>
