--- a/src/Runtime/workflow-engine/tests/WorkflowEngine.Resilience.Tests/WorkflowEngine.Resilience.Tests.csproj
+++ b/src/Runtime/workflow-engine/tests/WorkflowEngine.Resilience.Tests/WorkflowEngine.Resilience.Tests.csproj
@@ -19,4 +19,8 @@
     <Using Include="Xunit"/>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../../src/WorkflowEngine.Resilience/WorkflowEngine.Resilience.csproj" />
+  </ItemGroup>
+
 </Project>
