Minor health status and telemetry tweaks

--- a/src/Runtime/workflow-engine/docker-compose.yaml
+++ b/src/Runtime/workflow-engine/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql
     networks:
       - workflow-engine-network
     healthcheck:
