--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.json
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.json
@@ -3,7 +3,8 @@
     "LogLevel": {
       "Default": "Warning",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.EntityFrameworkCore": "Warning"
+      "Microsoft.EntityFrameworkCore": "Warning",
+      "WorkflowEngine.Data.Services.DbMigrationService": "Information"
     }
   },
   "AllowedHosts": "*",
