--- a/src/Designer/frontend/admin/package.json
+++ b/src/Designer/frontend/admin/package.json
@@ -19,6 +19,7 @@
     "typecheck:watch": "tsc --noEmit -w"
   },
   "dependencies": {
+    "@posthog/react": "1.7.0",
     "@studio/content-library": "workspace:^",
     "@studio/feedback-form": "workspace:^",
     "@studio/hooks": "workspace:^",
@@ -27,6 +28,7 @@
     "axios": "1.13.5",
     "classnames": "2.5.1",
     "i18next": "25.7.4",
+    "posthog-js": "1.333.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "16.5.3",
