--- a/src/App/frontend/.gitignore
+++ b/src/App/frontend/.gitignore
@@ -399,6 +399,7 @@ src/Altinn.Apps/AppTemplates/AspNet/App/Properties/launchSettings.json
 *.generated.tsx
 *.generated.json
 *.generated.schema.json
+nextsrc/api/generated
 layout.schema.v1.json
 layout-sets.schema.v1.json
 layoutSettings.schema.v1.json
