--- a/App/config/applicationmetadata.json
+++ b/App/config/applicationmetadata.json
@@ -19,6 +19,19 @@
       "enabledFileValidators": []
     },
     {
+      "id": "subform-pdf",
+      "allowedContentTypes": [
+        "application/pdf"
+      ],
+      "maxCount": 0,
+      "minCount": 0,
+      "enablePdfCreation": false,
+      "enableFileScan": false,
+      "validationErrorOnPendingFileScan": false,
+      "enabledFileAnalysers": [],
+      "enabledFileValidators": []
+    },
+    {
       "id": "model",
       "allowedContentTypes": [
         "application/xml"
@@ -70,7 +83,7 @@
         "application/xml"
       ],
       "appLogic": {
-        "autoCreate": false,
+        "autoCreate": true,
         "classRef": "Altinn.App.Models.SubformModel.SubformModel",
         "allowAnonymousOnStateless": false,
         "autoDeleteOnProcessEnd": false,
