--- a/App/ui/TestSubform/Settings.json
+++ b/App/ui/TestSubform/Settings.json
@@ -2,7 +2,7 @@
   "$schema": "https://altinncdn.no/schemas/json/layout/layoutSettings.schema.v1.json",
   "pages": {
     "order": [
-      "ServiceTask"
+      "Side1"
     ]
   }
 }
