--- a/infra/runtime/syncroot/base/kustomization.yaml
+++ b/infra/runtime/syncroot/base/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - apps-runtime-config.yaml
   - pdf3.yaml
   - operator.yaml
   - pdf.yaml
