chore: codeowners kjoring squad update

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,48 @@
-/.github/CODEOWNERS                         @altinn/team-studio
+/.github/CODEOWNERS                         @altinn/team-altinn-studio
 src/test/K6/**                              @altinn/team-core
 frontend/resourceadm/**                     @altinn/team-access-info
+
+# Squad Kjøring
+# Src
+src/App/azure-pipelines/**                  @altinn/team-altinn-studio-kjoring
+src/cli/**                                  @altinn/team-altinn-studio-kjoring
+src/gitea/**                                @altinn/team-altinn-studio-kjoring
+src/gitea-runner/**                         @altinn/team-altinn-studio-kjoring
+src/lhci-server/**                          @altinn/team-altinn-studio-kjoring
+src/Runtime/kubernetes-wrapper/**           @altinn/team-altinn-studio-kjoring
+src/Runtime/localtest/**                    @altinn/team-altinn-studio-kjoring
+src/Runtime/operator/**                     @altinn/team-altinn-studio-kjoring
+src/Runtime/pdf3/**                         @altinn/team-altinn-studio-kjoring
+src/Runtime/StudioGateway/**                @altinn/team-altinn-studio-kjoring
+src/Runtime/test/**                         @altinn/team-altinn-studio-kjoring
+# Infra
+charts/altinn-loadbalancer/**               @altinn/team-altinn-studio-kjoring
+charts/altinn-loadbalancer-config/**        @altinn/team-altinn-studio-kjoring
+charts/gitea-org-runner/**                  @altinn/team-altinn-studio-kjoring
+charts/gitea-org-runner-config/**           @altinn/team-altinn-studio-kjoring
+charts/kuberneteswrapper/**                 @altinn/team-altinn-studio-kjoring
+charts/kuberneteswrapper-config/**          @altinn/team-altinn-studio-kjoring
+infra/**                                    @altinn/team-altinn-studio-kjoring
+# GitHub Workflows
+.github/workflows/cli-build-test.yaml                      @altinn/team-altinn-studio-kjoring
+.github/workflows/deploy-gitea-runners.yaml                @altinn/team-altinn-studio-kjoring
+.github/workflows/deploy-kubernetes-wrapper.yaml           @altinn/team-altinn-studio-kjoring
+.github/workflows/deploy-lhci-server.yaml                  @altinn/team-altinn-studio-kjoring
+.github/workflows/deploy-loadbalancer.yaml                 @altinn/team-altinn-studio-kjoring
+.github/workflows/deploy-runtime-flux-config.yaml          @altinn/team-altinn-studio-kjoring
+.github/workflows/deploy-runtime-grafana-manifests.yaml    @altinn/team-altinn-studio-kjoring
+.github/workflows/deploy-runtime-observability.yaml        @altinn/team-altinn-studio-kjoring
+.github/workflows/deploy-runtime-operator.yaml             @altinn/team-altinn-studio-kjoring
+.github/workflows/deploy-runtime-pdf3.yaml                 @altinn/team-altinn-studio-kjoring
+.github/workflows/deploy-runtime-studio-gateway.yaml       @altinn/team-altinn-studio-kjoring
+.github/workflows/deploy-runtime-syncroot.yaml             @altinn/team-altinn-studio-kjoring
+.github/workflows/deploy-studio-observability.yaml         @altinn/team-altinn-studio-kjoring
+.github/workflows/deploy-studio-otel-operator.yaml         @altinn/team-altinn-studio-kjoring
+.github/workflows/deploy-studio-syncroot.yaml              @altinn/team-altinn-studio-kjoring
+.github/workflows/gitea-check-texts-file.yml               @altinn/team-altinn-studio-kjoring
+.github/workflows/gitea-runner-test.yml                    @altinn/team-altinn-studio-kjoring
+.github/workflows/runtime-gateway-tests.yaml               @altinn/team-altinn-studio-kjoring
+.github/workflows/runtime-kubernetes-wrapper-build.yaml    @altinn/team-altinn-studio-kjoring
+.github/workflows/runtime-localtest-build.yml              @altinn/team-altinn-studio-kjoring
+.github/workflows/runtime-operator-build.yml               @altinn/team-altinn-studio-kjoring
+.github/workflows/runtime-pdf3-build.yml                   @altinn/team-altinn-studio-kjoring
