Lots of changes of various nature. I've lost perspective a bit, hence this branch

--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Models/WorkflowEngine.Models.csproj
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Models/WorkflowEngine.Models.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <InternalsVisibleTo Include="WorkflowEngine.Data" />
+    <InternalsVisibleTo Include="WorkflowEngine.Api" />
     <InternalsVisibleTo Include="$(AssemblyName).Tests" />
   </ItemGroup>
 
