chore: runtime add safe-to-evict annotation to allow better scaling behavior

--- a/infra/observability/runtime/overlay/patches/linkerd-injection.yaml
+++ b/infra/observability/runtime/overlay/patches/linkerd-injection.yaml
@@ -6,6 +6,7 @@ spec:
   podAnnotations:
     linkerd.io/inject: "enabled"
     config.linkerd.io/skip-outbound-ports: "443"
+    cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
 ---
 apiVersion: opentelemetry.io/v1beta1
 kind: OpenTelemetryCollector
@@ -15,3 +16,4 @@ spec:
   podAnnotations:
     linkerd.io/inject: "enabled"
     config.linkerd.io/skip-outbound-ports: "443"
+    cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
