--- a/src/Runtime/operator/config/local-minimal/fakes.yaml
+++ b/src/Runtime/operator/config/local-minimal/fakes.yaml
@@ -32,6 +32,8 @@ spec:
     metadata:
       labels:
         app: fakes
+      annotations:
+        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
     spec:
       securityContext:
         runAsNonRoot: true
