--- a/src/Runtime/StudioGateway/infra/kustomize/fake-oidc/deployment.yaml
+++ b/src/Runtime/StudioGateway/infra/kustomize/fake-oidc/deployment.yaml
@@ -27,6 +27,8 @@ spec:
     metadata:
       labels:
         app: fake-oidc
+      annotations:
+        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
     spec:
       containers:
         - name: nginx
