chore: apps syncroot disable wait

--- a/infra/runtime/syncroot/base/apps-syncroot.yaml
+++ b/infra/runtime/syncroot/base/apps-syncroot.yaml
@@ -23,7 +23,7 @@ spec:
   timeout: 1m
   prune: true
   force: false
-  wait: true
+  wait: false
   path: ./${ENVIRONMENT}
   postBuild:
     substitute:
