--- a/src/Runtime/gateway/infra/kustomize/base/rolebinding.yaml
+++ b/src/Runtime/gateway/infra/kustomize/base/rolebinding.yaml
@@ -4,7 +4,7 @@ metadata:
   name: gateway-role-binding
 subjects:
   - kind: ServiceAccount
-    name: gateway
+    name: studio-gateway
     namespace: runtime-gateway
 roleRef:
   kind: ClusterRole
