--- a/src/Runtime/gateway/infra/kustomize/base/serviceaccount.yaml
+++ b/src/Runtime/gateway/infra/kustomize/base/serviceaccount.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: gateway
+  # Keep this stable: Azure Entra federated credential subject binds to SA name + namespace.
+  name: studio-gateway
   annotations:
     azure.workload.identity/client-id: "${GATEWAY_ENTRA_CLIENT_ID}"
